[gd_scene load_steps=6 format=2]

[ext_resource path="res://HelvetiPixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/tutorialtext.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.0117647, 0.0117647, 0.301961 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 99.0
margin_top = -179.0
margin_right = 501.0
margin_bottom = -74.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 2.0
margin_right = 374.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "    "
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -301.0
margin_top = 94.0
margin_right = -44.0
margin_bottom = 238.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel4"]
anchor_right = 0.973
anchor_bottom = 0.927
margin_left = 4.0
margin_top = 5.0
margin_right = -0.0610046
margin_bottom = 0.512009
custom_fonts/font = SubResource( 3 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -835.0
margin_top = 25.0
margin_right = -540.0
margin_bottom = 222.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel3"]
anchor_right = 0.973
anchor_bottom = 0.927
margin_left = 16.7573
margin_top = 10.8578
margin_right = -4.39972
margin_bottom = -5.65916
custom_fonts/font = SubResource( 3 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 603.0
margin_top = -107.0
margin_right = 907.0
margin_bottom = 93.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel2"]
anchor_right = 0.973
anchor_bottom = 0.927
margin_left = 15.3431
margin_top = 12.2722
margin_right = -9.21094
margin_bottom = 5.95215
custom_fonts/font = SubResource( 3 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
